--- a/facturier/index.html
+++ b/facturier/index.html
@@ -40,7 +40,7 @@
           <div class="top">
             <div class="block">
               <div class="header">
-                <div class="meta title">Invoice</div>
+                <div class="meta title">Facture</div>
               </div>
               <div class="info"><span class="meta">Invoice Number</span> #{{ invoice.Number }}</div>
               <div class="info" v-if="invoice.Issued"><div class="meta date-tag">Issued</div> {{ invoice.Issued | asDate }}</div>
