--- a/facturier/index.html
+++ b/facturier/index.html
@@ -42,11 +42,11 @@
               <div class="header">
                 <div class="meta title">Facture</div>
               </div>
-              <div class="info"><span class="meta">Invoice Number</span> #{{ invoice.Number }}</div>
+              <div class="info"><span class="meta">Numéro de Facture</span> #{{ invoice.Number }}</div>
               <div class="info" v-if="invoice.Issued"><div class="meta date-tag">Issued</div> {{ invoice.Issued | asDate }}</div>
               <div class="info" v-if="invoice.Due"><div class="meta date-tag">Due</div> {{ invoice.Due | asDate }}</div>
             </div>
-            
+            u
             <div class="supplier">
               <div v-for="business in (invoice.Invoicer ? [invoice.Invoicer] : [])">
                 <template v-if="typeof(business) === 'string'">
