--- a/facturier/index.html
+++ b/facturier/index.html
@@ -133,7 +133,7 @@
               <div class="details">{{ invoice.Subtotal | currency }}</div>
             </div>
             <div class="part">
-              <div class="title">Deduction</div>
+              <div class="title">Réduction</div>
               <div class="details">{{ invoice.Deduction | currency }}</div>
             </div>
             <div class="part">
