--- a/facturier/index.html
+++ b/facturier/index.html
@@ -187,7 +187,7 @@
 
           <div class="footer">
             <div class="thanks">
-              Thank you!
+              Merci !
             </div>
           </div>
 
