--- a/facturier/index.html
+++ b/facturier/index.html
@@ -114,8 +114,8 @@
             <template v-else>
               <tr>
                 <th>Description</th>
-                <th class="money">Unit Price</th>
-                <th class="number">Quantity</th>
+                <th class="money">Prix à l'untité</th>
+                <th class="number">Quantité</th>
                 <th class="money">Total</th>
               </tr>
               <tr v-for="item in invoice.Items">
