--- a/facturier/index.html
+++ b/facturier/index.html
@@ -192,7 +192,7 @@
           </div>
 
           <div class="print">
-            <a href="javascript:window.print()">Print</a>
+            <a href="javascript:window.print()">Imprimer</a>
           </div>
         </template>
       </div>
