--- a/facturier/index.html
+++ b/facturier/index.html
@@ -114,7 +114,7 @@
             <template v-else>
               <tr>
                 <th>Description</th>
-                <th class="money">Prix à l'untité</th>
+                <th class="money">Prix à l'unité</th>
                 <th class="number">Quantité</th>
                 <th class="money">Total</th>
               </tr>
@@ -129,7 +129,7 @@
 
           <div class="summary">
             <div class="part">
-              <div class="title">Subtotal</div>
+              <div class="title">Sous-total</div>
               <div class="details">{{ invoice.Subtotal | currency }}</div>
             </div>
             <div class="part">
