--- a/facturier/index.html
+++ b/facturier/index.html
@@ -114,7 +114,7 @@
             <template v-else>
               <tr>
                 <th>Description</th>
-                <th class="money">Prix à l'unité</th>
+                <th class="money">Prix unitaire</th>
                 <th class="number">Quantité</th>
                 <th class="money">Total</th>
               </tr>
@@ -181,7 +181,7 @@
           </template>
           <template v-if="invoice.Paid">
             <div class="paid">
-              PAID
+              RÉGLÉ
             </div>
           </template>
 
