--- a/facturier/index.html
+++ b/facturier/index.html
@@ -103,7 +103,7 @@
           <table class="items">
             <template v-if="!Array.isArray(invoice.Items)">
               <tr>
-                <th>Référence</th>
+                <th>REF</th>
                 <th>Description</th>
                 <th class="money">Total</th>
               </tr>
