--- a/facturier/index.html
+++ b/facturier/index.html
@@ -59,7 +59,7 @@
                     <template v-if="business.Street2">
                       {{ business.Street2 }}<br />
                     </template>
-                    {{ business.City }} {{ business.State }} {{ business.Zip }}<br />
+                    {{ business.Zip }} {{ business.City }} {{ business.State }} <br />
                     <template v-if="business.Country">
                       {{ business.Country }}<br />
                     </template>
