--- a/facturier/index.html
+++ b/facturier/index.html
@@ -132,7 +132,7 @@
           <div class="summary">
             <div class="part">
               <div class="title">Sous-total</div>
-              <div class="details">{{ invoice.Subtotal | currency }}</div>
+              <div class="details">{{ invoice.Subtotal | &euro }}</div>
             </div>
             <div class="part">
               <div class="title">Réduction</div>
