--- a/facturier/index.html
+++ b/facturier/index.html
@@ -114,6 +114,7 @@
             </template>
             <template v-else>
               <tr>
+                <th>REF</th>
                 <th>Description</th>
                 <th class="money">Prix unitaire</th>
                 <th class="number">Quantité</th>
