--- a/facturier/index.html
+++ b/facturier/index.html
@@ -190,7 +190,7 @@
 
           <div class="footer">
             <div class="thanks">
-              Merci !
+              Merci de votre confiance !
             </div>
           </div>
 
