--- a/facturier/index.html
+++ b/facturier/index.html
@@ -125,7 +125,7 @@
                 <td>{{ item.Description }}</td>
                 <td class="money">{{ item.Price | currency:'EUR':'symbol':'1.2-2'}}</td>
                 <td class="number">{{ item.Quantity }}</td>
-                <td class="money">{{ item.Total | currency }}</td>
+                <td class="money">{{ item.Total | currency:'EUR' }}</td>
               </tr>
             </template>
           </table>
