--- a/facturier/index.html
+++ b/facturier/index.html
@@ -105,7 +105,7 @@
               <tr>
                 <th>REF</th>
                 <th>Description</th>
-                <th class="money">Total</th>
+                <th class="money">Total (€)</th>
               </tr>
               <tr>
                 <td>{{ invoice.Items }}</td>
