--- a/facturier/index.html
+++ b/facturier/index.html
@@ -116,9 +116,9 @@
               <tr>
                 <th>REF</th>
                 <th>Description</th>
-                <th class="money">Prix unitaire</th>
+                <th class="money">Prix unitaire (€)</th>
                 <th class="number">Quantité</th>
-                <th class="money">Total</th>
+                <th class="money">Total (€)</th>
               </tr>
               <tr v-for="item in invoice.Items">              
                 <td>{{ item.REF }}</td>
