--- a/facturier/index.html
+++ b/facturier/index.html
@@ -123,9 +123,9 @@
               <tr v-for="item in invoice.Items">              
                 <td>{{ item.REF }}</td>
                 <td>{{ item.Description }}</td>
-                <td class="money">{{ item.Price | currency:'symbol':'1.2-2'}}</td>
+                <td class="money">{{ item.Price:'1.2-2'}}</td>
                 <td class="number">{{ item.Quantity }}</td>
-                <td class="money">{{ item.Total | currency:'EUR' }}</td>
+                <td class="money">{{ item.Total | currency }}</td>
               </tr>
             </template>
           </table>
