--- a/facturier/index.html
+++ b/facturier/index.html
@@ -132,11 +132,11 @@
 
           <div class="summary">
             <div class="part">
-              <div class="title">Sous-total</div>
+              <div class="title">Sous-total (€)</div>
               <div class="details">{{ invoice.Subtotal }}</div>
             </div>            
             <div class="part">
-              <div class="title">Frais de port</div>
+              <div class="title">Frais de port (€)</div>
               <div class="details">{{ invoice.Taxes }}</div>
             </div>
             <div class="total">
