--- a/facturier/index.html
+++ b/facturier/index.html
@@ -123,7 +123,7 @@
               <tr v-for="item in invoice.Items">              
                 <td>{{ item.REF }}</td>
                 <td>{{ item.Description }}</td>
-                <td class="money">{{ item.Price }}</td>
+                <td class="money">{{ item.Price |currency}}</td>
                 <td class="number">{{ item.Quantity }}</td>
                 <td class="money">{{ item.Total }}</td>
               </tr>
